tests/toy/neg/001473_mutation.toylang
program a = { var a : var int; } .
